--- a/templates/index_template.html
+++ b/templates/index_template.html
@@ -9,22 +9,30 @@
     <title>Index</title>
   </head>
   <body>
-    {% for book in books %}
-    <div class="card mb-3" style="max-width: 540px;">
-      <div class="row no-gutters">
-        <div class="col-md-4">
-          <img src="{{book.img_src|urlencode}}" class="card-img" alt="Обложка книги {{book.title}}" title="{{book.title}}">
+    <div class="container">
+      {% for book_row in book_rows %}
+        <div class="row">
+          {% for book in book_row %}
+            <div class="col">
+              <div class="card mb-3" style="max-width: 540px;">
+                <div class="row no-gutters">
+                  <div class="col-md-4">
+                    <img src="{{book.img_src|urlencode}}" class="card-img" alt="Обложка книги {{book.title}}" title="{{book.title}}">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">{{book.title}}</h5>
+                      <p class="card-text">{{book.author}}</p>
+                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          {% endfor %}
         </div>
-        <div class="col-md-8">
-          <div class="card-body">
-            <h5 class="card-title">{{book.title}}</h5>
-            <p class="card-text">{{book.author}}</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
-      </div>
+      {% endfor %}
     </div>
-    {% endfor %}
 
     <script src="../static/jquery-3.3.1.slim.min.js"></script>
     <script src="../static/popper.min.js"></script>
