--- a/templates/index_template.html
+++ b/templates/index_template.html
@@ -10,6 +10,27 @@
   </head>
   <body>
     <div class="container">
+      <nav aria-label="Page navigation">
+        <ul class="pagination">
+          {% if current_page == 1 %}
+            <li class="page-item disabled"><a class="page-link" href="#">Назад</a></li>
+          {% else %}
+            <li class="page-item"><a class="page-link" href="index{{current_page - 1}}.html">Назад</a></li>
+          {% endif %}
+          {% for page in range(1, last_page + 1) %}
+            {% if page == current_page %}
+              <li class="page-item active"><a class="page-link" href="index{{page}}.html">{{page}}</a></li>
+            {% else %}
+              <li class="page-item"><a class="page-link" href="index{{page}}.html">{{page}}</a></li>
+            {% endif %}
+          {% endfor %}
+          {% if current_page == last_page %}
+            <li class="page-item disabled"><a class="page-link" href="#">Вперёд</a></li>
+          {% else %}
+            <li class="page-item"><a class="page-link" href="index{{current_page + 1}}.html">Вперёд</a></li>
+          {% endif %}
+        </ul>
+      </nav>
       {% for book_row in book_rows %}
         <div class="row">
           {% for book in book_row %}
