Prepare site to work offline

--- a/templates/index_template.html
+++ b/templates/index_template.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="../static/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+    <link rel="icon" type="image/png" href="/static/favicon.png">
 
-    <title>Index</title>
+    <title>Оффлайн библиотека - {{current_page}} страница</title>
   </head>
   <body>
     <div class="container">
-      <nav aria-label="Page navigation">
+      <nav aria-label="Page navigation" style="margin: 15px;">
         <ul class="pagination">
           {% if current_page == 1 %}
             <li class="page-item disabled"><a class="page-link" href="#">Назад</a></li>
@@ -31,6 +32,7 @@
           {% endif %}
         </ul>
       </nav>
+      <hr>
       {% for book_row in book_rows %}
         <div class="row">
           {% for book in book_row %}
@@ -44,10 +46,14 @@
                     <div class="card-body">
                       <h5 class="card-title">{{book.title}}</h5>
                       <p class="card-text">{{book.author}}</p>
+                      <p>
+                        {% for genre in book.genres %}
+                          <span class="badge badge-light">{{genre}}</span>
+                        {% endfor %}
+                      </p>
                       <p class="card-link">
                         <a href="{{book.book_path|urlencode}}" target="_blank">Читать</a>
                       </p>
-                      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                     </div>
                   </div>
                 </div>
@@ -58,8 +64,8 @@
       {% endfor %}
     </div>
 
-    <script src="../static/jquery-3.3.1.slim.min.js"></script>
-    <script src="../static/popper.min.js"></script>
-    <script src="../static/bootstrap.min.js"></script>
+    <script src="../static/js/jquery-3.3.1.slim.min.js"></script>
+    <script src="../static/js/popper.min.js"></script>
+    <script src="../static/js/bootstrap.min.js"></script>
   </body>
 </html>
